# spelunktui

./: .env.example  CONTRIBUTING.md  Cargo.toml  OPENSPEC.md  PR_DESCRIPTION.md  README.md  \  package.json  test_auth.sh
.github/workflows/: audit.yml  codeql.yml  rust.yml
.jules/: sentinel.md
openspec/: plan.md
src/: api.rs  config.rs  config_wizard.rs  main.rs  tui.rs
src/models/: splunk.rs
src/utils/: mod.rs  saved_searches.rs
