[package]
name = "spelunktui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.29.0"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls", "query", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
syntect = "5.2"
regex = "1.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
url = "2.5"
thiserror = "2.0"
urlencoding = "2.1"
serde_urlencoded = "0.7.1"
toml = "0.9.8"
directories = "6.0.0"
simplelog = "0.12.2"
open = "5.3.3"
clap = { version = "4.5.54", features = ["derive"] }
keyring = "3.6.3"
rpassword = "7.4.0"
